<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        tools:context=".ui.listmovie.ListMovieActivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_search_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:hint="@string/type_something"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_search"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tv_search_query"
            app:layout_constraintBottom_toBottomOf="@+id/tv_search_query"
            app:layout_constraintStart_toEndOf="@+id/tv_search_query"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_query"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/select_sort" />

        <RadioGroup
            android:id="@+id/radio_group_sort_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_select_sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_title_asc"
                android:text="@string/title_asc" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_title_desc"
                android:layout_marginTop="5dp"
                android:text="@string/title_desc" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_date_asc"
                android:layout_marginTop="5dp"
                android:text="@string/date_asc" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_date_desc"
                android:layout_marginTop="5dp"
                android:text="@string/date_desc" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_popularity_asc"
                android:layout_marginTop="5dp"
                android:text="@string/popularity_asc" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_popularity_desc"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:text="@string/popularity_desc" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_goneMarginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_sort_type" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_movies_found"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_sort_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
